# rpi-uav

./: .gitignore  CMakeLists.txt  Makefile  README.md  drone.txt  gpiotest  log.txt  pid  takeoff
algorithm/: CMakeLists.txt
algorithm/include/: freebody.h  gps_baro_filter.h  gps_position_filter.h  mass_estimator.h  motor_director.h  navigator.h  pid.h
algorithm/src/: filters.cpp  freebody.cpp  gps_baro_filter.cpp  gps_position_filter.cpp  mass_estimator.cpp  motor_control.cpp  motor_director.cpp  navigator.cpp
algorithm/test/: fbtest.cpp  nav_test.cpp
arduino/IMU/: IMU.ino
arduino/libraries/Adafruit_BMP085_Unified/: Adafruit_BMP085_U.h
arduino/pwmtest/: pwmtest.ino
control/: CMakeLists.txt
control/include/: controller.h  raw_data.h  state.h  uavcore.h
control/src/: launch.cpp  raw_data.cpp  state.cpp
doc/: altcorrection.txt  drone.txt  types.txt
doc/errors/v1.0.0-alpha-overturn-response/: events.txt  out.txt
hardware/: CMakeLists.txt
hardware/include/: gps.h
hardware/src/: ardimu.cpp  gps.cpp  pwm.cpp  sensors.cpp
hardware/test/: arduino_test.cpp  bmp_test.cpp  gps_test.cpp  pwm_test.cpp
include/: Adafruit_Sensor.h  BMP085.h  BMP280.h  I2C.h  Kalman.h  Message.h  PID.h  SerialIMU.h  TimeUtil.h  adasensor.h  ardimu.h  bmp.h  control.h  drone.h  dtypes.h  filebuffer.h  filters.h  freebody.h  gps.h  i2c.h  matrix.h  message.h  monitor.h  motor.h  pid.h  pwm.h  smem.h  uavcore.h  vector.h
include/uav/: algorithm  control  filter  hardware  logging  math
log/: .gitignore  1501214558827.txt  1501215304479.txt  1501215335016.txt  1501215560777.txt  1501215634.txt  1501215665.txt  events.txt  export.txt  paramlog.txt  steplog.txt
log/0c35ff8-drive-tests/: test1.txt  test2.txt  test3.txt  test4.txt
log/a32809f-pid-convergence/: events.txt  out.txt
log/a8f72b9-long-seek-test/: events.txt
logging/: CMakeLists.txt
logging/include/: archive.h
logging/src/: archive.cpp  logstream.cpp
math/: CMakeLists.txt
math/include/: .freebody.h.back  angle.h  coordinate.h  freebody.h  functions.h  optional.h
math/src/: coordinate.cpp  freebody.cpp  functions.cpp
spike/: .gitignore  Adafruit_BMP085_U.h  BMP085.cpp  BMP085.h  BMP280.cpp  BMP280.h  BNO055.cpp  BNO055.h  CMakeLists.txt  Makefile  bmp  gps.cpp  gps.h  i2ctest.cpp  kalman.cpp  kalman.h  kalmantest.cpp  ncurses.cpp  parse.cpp  rollctrl.cpp  test.cpp  wpi_serial.cpp
spike/.trash/: filebuffer.h  gpiotest.cpp  lsm.cpp  lsm.h  template.cpp  timeutil.h
spike/.trash/motor/: motor.cpp  motor.h
spike/.trash/sim/: freebody.cpp  freebody.h  main.cpp  make
spike/BNO055/: .gitignore  BNO055.cpp  BNO055.h  main.cpp  make.sh
spike/LSM303/: lsm.cpp  lsm.h  main.cpp  make.sh
spike/altitude/: main.cpp  make.sh
spike/angle/: a.out  angle.cpp  angle.h  angles.cpp  angles.h  main.cpp  make.sh
spike/bezier/: main.cpp
spike/binlog/: .gitignore  main.cpp  make.sh
spike/bmp280/: Adafruit_BMP280.cpp  Adafruit_BMP280.h  Makefile  bmp280test.cpp
spike/checksum/: main.cpp
spike/control/: main.cpp  make.sh
spike/derivative/: main.cpp  make.sh
spike/drive_test/: main.cpp
spike/gps/: .gitignore  gps.cpp  gps.h  main.cpp  make.sh
spike/ins/: fb.cpp  ins.h  main.cpp
spike/kalman/: free.cpp  kalman.h  kalman_tester.h  main.cpp  mat2array.cpp
spike/logger/: data.txt  filebuffer.h  main.cpp  make.sh
spike/mass/: main.cpp  make.sh
spike/motor/: main.cpp  make.sh
spike/optional/: main.cpp  optional.h
spike/processes/: main.cpp  make.sh
spike/pwmdriver/: pwm.cpp
spike/sensor/: a.out  main.cpp
spike/serial/: main.cpp  make.sh
spike/sim/: main.cpp  make
spike/sim/utility/: matrix.h  quaternion.h  vector.h
spike/softPWM/: main.cpp  make.sh
spike/termios/: main.cpp  make.sh  termios
spike/thread/: main.cpp  make.sh
spike/traverse/: main.cpp  make.sh
spike/viewer/: main.cpp  make
src/: BMP085.cpp  BMP280.cpp  I2C.cpp  Kalman.cpp  PID.cpp  SerialIMU.cpp  TimeUtil.cpp  ardimu.cpp  bmp.cpp  control.cpp  drone.cpp  dtypes.cpp  filebuffer.cpp  filters.cpp  freebody.cpp  gps.cpp  i2c.cpp  launch.cpp  main.cpp  monitor.cpp  motor.cpp  pid.cpp  pwm.cpp  sensors.cpp  smem.cpp  test.cpp  timeutil.cpp  uavcore.cpp
src/algorithm/: gps_baro_filter.cpp  gps_baro_filter.h  gps_position_filter.cpp  gps_position_filter.h  mass_estimator.h  pid.cpp  pid.h
src/control/: control.cpp  control.h  controller.cpp  controller.h  launch.cpp  param.cpp  param.h  state.cpp  state.h
src/hardware/: adasensor.h  ardimu.cpp  ardimu.h  bmp.cpp  bmp.h  gps.cpp  gps.h  i2c.cpp  i2c.h  pwm.h  sensors.h
src/logging/: archive.cpp  archive.h  data_frame.cpp  data_frame.h  logstream.cpp  logstream.h  serial.h  uavcore.cpp  uavcore.h
src/math/: angle.cpp  angle.h  coordinate.cpp  freebody.h  functions.cpp  functions.h  quaternion.h
src/tests/: logging.cpp  math.cpp
test/: CMakeLists.txt  I2C.cpp  I2C.h  bin2txt.cpp  bin2vel.cpp  bmptest.cpp  chronotest.cpp  control.cpp  ctrltest.cpp  dronetest.cpp  events.cpp  fbtest.cpp  filetest.cpp  filtertest.cpp  gpiotest.cpp  gpstest.cpp  iostest.cpp  kalmantest.cpp  monitortest.cpp  pidtest.cpp  pwmtest.cpp  serialtest.cpp  skips.cpp  skipstest.cpp  time.cpp  timetest.cpp  units.cpp
test/src/: logging.cpp
tests/: test2.cpp
trash/: dtypes.h  filetest.cpp  timeutil.cpp
