include_directories("${CMAKE_CURRENT_LIST_DIR}/kalman/")

# add_executable(kalman ${CMAKE_CURRENT_LIST_DIR}/kalman/main.cpp)
# target_link_libraries(kalman algorithm hardware math)
# add_executable(drive_test ${CMAKE_CURRENT_LIST_DIR}/drive_test/main.cpp)
# target_link_libraries(drive_test algorithm hardware math)
# add_executable(fb ${CMAKE_CURRENT_LIST_DIR}/ins/fb.cpp)
# target_link_libraries(fb hardware algorithm math)
# add_executable(checksum ${CMAKE_CURRENT_LIST_DIR}/checksum/main.cpp)
